# livvi

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  SOUL.md  deny.toml
.github/workflows/: container.yaml  lint.yaml  tests.yaml
.mise/: config.toml
docs/: config.md
docs/agents/: livvi-store.md
docs/plans/: memini-integration.md
livvi-core/: Cargo.toml
livvi-core-macros/: Cargo.toml
livvi-core-macros/src/: lib.rs
livvi-core/examples/: agent-loop.rs
livvi-core/prompts/: input-event-loop.md  memory.md  scratchpad.md
livvi-core/src/: agent.rs  compaction.rs  context.rs  interrupt.rs  lib.rs  model.rs  plugin.rs  resolve.rs  state.rs  summarizer.rs
livvi-core/src/agent/: interrupts.rs  mod.rs  turns.rs
livvi-core/src/memory/: instructions.md  mod.rs  noop.rs  tools.rs
livvi-core/src/provider/: mock.rs  mod.rs
livvi-core/src/tool/: mod.rs
livvi-daemon/: Cargo.toml
livvi-daemon/src/: main.rs
livvi-discord/: Cargo.toml
livvi-discord/src/: instructions.md  lib.rs  plugin.rs  state.rs
livvi-discord/src/tools/: mod.rs  react.rs  read_attachments.rs  send.rs
livvi-lcm/: Cargo.toml
livvi-lcm/migrations/: 20260713000000_initial.sql
livvi-lcm/src/: compactor.rs  dag.rs  lib.rs  store.rs
livvi-memini/: Cargo.toml
livvi-memini/src/: client.rs  lib.rs  memory.rs  plugin.rs
livvi-memini/src/tools/: mod.rs
livvi-openai/: Cargo.toml
livvi-openai/examples/: openai-loop.rs
livvi-openai/src/: chat_completions.rs  common.rs  lib.rs  responses.rs
livvi-store/: Cargo.toml
livvi-store/examples/: basic.rs
livvi-store/migrations/: 20260703000000_initial.sql  20260703000001_add_also_known_as.sql  20260703000002_add_tool_permissions.sql
livvi-store/src/: conversation.rs  lib.rs  mock.rs  person.rs  tool_permission.rs
livvi-store/src/sqlite/: mod.rs
livvi-web/: Cargo.toml
livvi-web/src/: lib.rs  plugin.rs  state.rs
livvi-web/src/tools/: fetch.rs  mod.rs  search.rs
