[workspace]
resolver = "3"
members = ["livvi-core", "livvi-daemon", "livvi-discord"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://forgejo.hayden.moe/hayden/livvi"
exclude = ["src/**/AGENTS.md", "src/**/CLAUDE.md"]
authors = ["Hayden <hayden@thighhighs.moe>"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
futures = "0.3"
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.46"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1", features = ["v4"] }
mpsc = "0.3"

[profile.dev]
opt-level = 2
