[workspace]
resolver = "3"
members = ["livvi-core", "livvi-core-macros", "livvi-daemon", "livvi-discord", "livvi-lcm", "livvi-openai", "livvi-store"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://forgejo.hayden.moe/hayden/livvi"
exclude = ["src/**/AGENTS.md", "src/**/CLAUDE.md"]
authors = ["Hayden <hayden@thighhighs.moe>"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
futures = "0.3"
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.46"
lru = "0.16.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "time"] }
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1", features = ["v4", "serde"] }
mpsc = "0.3"
reqwest = "0.12"

openai-api-rs = "10.0.1"
parking_lot = "0.12"

livvi-core = { path = "livvi-core" }
livvi-core-macros = { path = "livvi-core-macros" }
livvi-discord = { path = "livvi-discord" }
livvi-lcm = { path = "livvi-lcm" }
livvi-openai = { path = "livvi-openai" }
livvi-store = { path = "livvi-store", default-features = false }

[profile.dev]
opt-level = 2
