[package]
name = "livvi-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
tracing.workspace = true
schemars.workspace = true
jsonschema.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
livvi-core-macros = { path = "../livvi-core-macros" }

[dev-dependencies]
tracing-subscriber.workspace = true
