[package]
name = "livvi-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
livvi-core-macros = { path = "../livvi-core-macros" }
livvi-store.workspace = true
lru.workspace = true
jsonschema.workspace = true
parking_lot.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
