[package]
name = "livvi-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
