[package]
name = "livvi-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
livvi-core.workspace = true
livvi-discord.workspace = true
livvi-lcm.workspace = true
livvi-memini.workspace = true
livvi-openai.workspace = true
livvi-store = { workspace = true, features = ["sqlite"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
