[package]
name = "livvi-discord"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
livvi-core.workspace = true
serde.workspace = true
schemars.workspace = true
serenity = { version = "0.12", default-features = false, features = ["builder", "client", "gateway", "model", "rustls_backend"] }
tokio.workspace = true
tracing.workspace = true
