[package]
name = "livvi-openai"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
livvi-core.workspace = true
openai-api-rs.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
schemars.workspace = true
tokio.workspace = true
