[package]
name = "livvi-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
html2text = "0.17"
livvi-core.workspace = true
readability = { version = "0.3", default-features = false }
reqwest = { workspace = true, features = ["json"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url = "2"
bytes.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock = "0.6"
